fix: white box align

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -124,10 +124,8 @@ p {
       background-color: #fff;
       margin: 0 auto;
       margin-bottom: 15vh;
-      margin-left: 15px;
-      margin-right: 15px;
       padding: 20px;
-      width: 500px;
+      width: 90%;
       border-radius: 10px;
 
       h3 {
